Added the new API command set-global-feature to turn features and plugins on and off from the command line.
The last IMAP, POP3 and SMTP logins for mailbox users are now tracked by Virtualmin, and can be viewed on the Edit Mailbox page and in the output from the list-users API command.
When an alias domain with a website is disabled, it is now removed from the parent domain's Apache virtualhost.
Added the list-backup-logs API command to report on previous backups run from the web UI, API or on schedule.
Added the --plan-features flag to the modify-domain command, to enable features based those selected for the plan.
The virtualmin configuration check now ensures that the system has at least 256 MB of real (non-burstable) memory, and displays a warning if total memory is too low.
Updated the modify-php-ini API command to set variables in the Apache configuration as well.
Secondary mail servers running Sendmail and Postfix will now receive the list of allowed addresses for all domains from the master Virtualmin system, to prevent backscatter spam.
---- Changes since 3.87 ----
Updated the PiWik script installer to version 1.5.1, phpBB to 3.0.9, WordPress to 3.2.1, Joomla to 1.6.6 and 1.7.0, SugarCRM to 6.2.1, phpMyAdmin to 3.4.4, Mantis to 1.2.6, Drupal to 7.8, Horde Webmail to 1.2.10, Horde to 3.3.12, ZenPhoto to 1.4.1.2, Moodle to 2.1.1, LimeSurvey to 1.91, RoundCube to 0.5.4, PHPList to 2.10.15, WebCalendar to 1.2.4, eGroupWare to 1.8.002.20110811, PHP-Nuke to 8.2.4, Magento to 1.6.0.0, TWiki to 5.1.0, Mantis to 1.2.7, CMS Made Simple to 1.9.4.3, Instiki to 0.19.3, and Dolibarr to 3.0.1.
When a virtual server is disabled, any cron jobs run by its owner or mailbox users are also disabled.
An IPv6 address that is already active can now be used when creating a virtual server.