@@ -1308,3 +1308,4 @@ Secondary mail servers running Sendmail and Postfix will now receive the list of
 Updated the PiWik script installer to version 1.5.1, phpBB to 3.0.9, WordPress to 3.2.1, Joomla to 1.6.6 and 1.7.0, SugarCRM to 6.2.1, phpMyAdmin to 3.4.4, Mantis to 1.2.6, Drupal to 7.8, Horde Webmail to 1.2.10, Horde to 3.3.12, ZenPhoto to 1.4.1.2, Moodle to 2.1.1, LimeSurvey to 1.91, RoundCube to 0.5.4, PHPList to 2.10.15, WebCalendar to 1.2.4, eGroupWare to 1.8.002.20110811, PHP-Nuke to 8.2.4, Magento to 1.6.0.0, TWiki to 5.1.0, Mantis to 1.2.7, CMS Made Simple to 1.9.4.3, Instiki to 0.19.3, and Dolibarr to 3.0.1.
 When a virtual server is disabled, any cron jobs run by its owner or mailbox users are also disabled.
 An IPv6 address that is already active can now be used when creating a virtual server.
+Checking for new script updates is now enabled by default on new installs and upgrades, unless explicitly disabled by root.
